kubernetes-manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: quiz
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-sa # Bind to a specific service account for RBAC
      automountServiceAccountToken: false # Disable automatic service account token mounting
      containers:
      - name: frontend
        image: ogochukwuozotta/frontend-js:1.0 # Use a specific version tag
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "200m" # CPU request
            memory: "256Mi" # Memory request.
          limits:
            cpu: "400m" # CPU limit
            memory: "512Mi" # Memory limit
        volumeMounts:
        - name: frontend-storage
          mountPath: /data/storage # Adjust mount path as needed
      volumes:
      - name: frontend-storage
        persistentVolumeClaim:
          claimName: frontend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: quiz
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
